<resources>
    <string name="app_name">Panduan Praktikum</string>
    <string name="pengantar">PENGANTAR</string>
    <string name="lkpd">LKPD</string>
    <string name="profil">PROFIL</string>
    <string name="daftar_pustaka">DAFTAR PUSTAKA</string>
    <string name="panduan_praktikum">PANDUAN PRAKTIKUM</string>
    <string name="kikd"><![CDATA[KI & KD]]></string>
    <string name="penulis">Penulis \n \n Angelina Gadis Hernani</string>
    <string name="mediaiteratif">Media Interaktif \n <b>Panduan Praktikum</b> BIOLOGI \n Untuk SMA/MA Kelas X</string>
    <string name="mediaiteratif2">Media Interaktif \n <b><font color='#FFE300'>Panduan Praktikum</font></b> BIOLOGI \n Untuk SMA/MA Kelas X</string>
    <string name="k1">Memahami, menerapkan, menganalisis pengetahuan faktual, konseptual, prosedural berdasarkan rasa ingin tahunya tentang ilmu pengetahuan, teknologi, seni, budaya dan humaniora dengan wawasan kemanusiaan, kebangsaan, kenegaraan, dan peradaban terkait penyebab fenomena dan kejadian, serta menerapkan pengetahuan prosedural pada bidang kajian yang spesifik sesuai dengan bakat dan minatnya untuk memecahkan masalah.</string>
    <string name="k31">Menjelaskan ruang lingkup biologi (permasalahan pada berbagai obyek biologi dan tingkat organisasi kehidupan), melalui penerapan metode ilmiah dan prinsip keselamatan kerja</string>
    <string name="k32">Menganalisis berbagai tingkat keanekaragaman hayati di Indonesia</string>
    <string name="k33">Menjelaskan prinsip-prinsip klasifikasi makhluk hidup dalam lima kingdom</string>
    <string name="k34">Menganalisis struktur, replikasi dan peran virus dalam kehidupan</string>
    <string name="k35">Menganalisis komponen-komponen ekosistem dan interaksi antar komponen tersebut</string>
    <string name="k36">Menganalisis data perubahan lingkungan, penyebab, dan dampaknya bagi kehidupan</string>
    <string name="panduan_praktikummenu">PANDUAN \n PRAKTIKUM</string>
    <string name="judul_m1">Pengaruh Cahaya Matahari terhadap Pertumbuhan tanaman</string>
    <string name="sumber_m1">Sumber : https://resepimasakan.net/cara-menanam-sayuran-kangkung-mudah/</string>
    <string name="status_stop"><font color='#FF8E8E93'>Stopped</font></string>
    <string name="tp">Tujuan Praktikum</string>
    <string name="ab">Alat dan Bahan</string>
    <string name="alat">Alat :</string>
    <string name="bahan">Bahan :</string>
    <string name="tanya">Pertanyaan</string>
    <string name="tugas">Tugas</string>
    <string name="pengantar_1">Perhatikan gambar di atas! Apakah kamu pernah mengamati bagaimana proses pertumbuhan tanaman? Tahukah kamu bahwa cahaya mahatahari merupakan salah satu faktor yang berperan penting dalam proses pertumbuhan tanaman. Jika tumbuhan tidak mendapatkan cahaya matahari, apakah tumbuhan dapat tetap tumbuh? Pada kegiatan ini kita akan bersama-sama membuktikan pengaruh cahaya matahari terhadap pertumbuhan tanaman. Yuk kita simak!</string>
    <string name="penegasan_1">Mengapa cahaya matahari dapat mempengaruhi pertumbuhan tanaman ?</string>
    <string name="tujuan_1">Siswa mampu menganalisis pengaruh cahaya matahari terhadap pertumbuhan tanaman</string>
    <string name="alat_1">1. Gelas plastik (3 buah) \n 2. Kapas potong (3 lembar)</string>
    <string name="bahan_1">1. Bibit tanaman (berusia 3 hari)\n 2. Air</string>
    <string name="carakerja_1_1">Siapkan bibit tanaman yang sudah berusia 3 hari!</string>
    <string name="carakerja_2_1">Unduhlah Lembar Kerja Peserta Didik (LKPD) pada bagian home!</string>
    <string name="carakerja_3_1">Amati dan catatlah hasil pengamatan pada LKPD!</string>
    <string name="pengantarpertanyaan_1">Catatlah hasil pengamatanmu dalam bentuk tabel seperti tabel di bawah ini:</string>
    <string name="pertanyaan_a_1">Berdasarkan hasil pengamatan, pada kondisi seperti apa tanaman dapat tumbuh dengan cepat? Jelaskan!</string>
    <string name="pertanyaan_b_1">Apa yang dapat menyebabkan tanaman dapat tumbuh lebih cepat?</string>
    <string name="pertanyaan_c_1">Apa yang terjadi jika tanaman tidak mendapatkan cahaya matahari?</string>
    <string name="tugas_1">Buatlah poster ilmiah dengan kriteria di bawah ini!</string>
    <string name="isi_tugas1">
        1. Poster berjumlah 1 \n
        2. Jenis huruf Times New Roman dengan ukuran huruf minimal 16 cm \n
        3. Isi poster menyangkut :\n
        - Judul\n
        - Nama dan Kelas\n
        - Latar belakang (*) \n
        - Rumusan masalah (*)\n
        - Tujuan \n
        - Tinjauan pustaka/ Dasar teori (*) \n
        - Metode penelitian (*) \n
        - Hasil dan Pembahasan \n
        - Simpulan dan Saran (*) \n
        <b>Keterangan (*): Ditulis dengan ringkas</b></string>
    <string name="tujuan_praktikum">TUJUAN PRAKTIKUM</string>
    <string name="alat_amp_bahan"><![CDATA[ALAT & BAHAN]]></string>
    <string name="pertanyaan">PERTANYAAN</string>
    <string name="cara_kerja">CARA KERJA</string>
    <string name="tugas_">TUGAS</string>
    <string name="kriteria_pembuatan_poster">KRITERIA PEMBUATAN \n POSTER</string>
    <string name="judulbab2">BAB 2 \n KEANEKARAGAMAN \n HAYATI</string>
    <string name="judulbab2isi">Keanekaragaman Hayati</string>
    <string name="pengantar_2">Perhatikan kedua gambar di atas! Tahukah kamu bahwa keanekaragaman hayati dipengaruhi oleh dua faktor yaitu faktor genetik dan faktor lingkungan. Yuk kita lakukan identifikasi untuk melihat keanekaragaman genetik di lingkungan sekitar.</string>
    <string name="penegasan_2">Bagaimana keragaman genetik yang ada di lingkungan sekitarmu ?</string>
    <string name="tujuan_2">
        1.Siswa mampu mengidentifikasi keanekaragaman hayati tingkat gen \n
        2.Siswa mampu menganalisis tingkat keragaman hayati </string>
    <string name="alat_2">Subyek minimal 3 (Ayah/ibu/kakak/adik/teman/saudara)</string>
    <string name="carakerja_1_2">Unduhlah LKPD pada halaman home!</string>
    <string name="carakerja_2_2">Amatilah ciri-ciri orang yang dipilih dengan cermat!</string>
    <string name="carakerja_3_2">Tuliskan nama orang yang kamu amati dan catatlah hasil pengamatan pada lembar LKPD!</string>
    <string name="pengantarpertanyaan_2">Catatlah hasil pengamatanmu dalam bentuk tabel seperti tabel di bawah ini:</string>
    <string name="pertanyaan_a_2">Sebutkan persamaan fenotipe yang ditemukan pada subyek yang diamati!</string>
    <string name="pertanyaan_b_2">Sebutkan perbedaan fenotipe pada subyek yang diamati!</string>
    <string name="pertanyaan_c_2">Mengapa ada persamaan dan perbedaan pada fenotipe yang diamati?</string>
    <string name="pertanyaan_d_2">Apa yang terjadi jika pada suatu organisme terdapat keragaman tingkat gen?</string>
    <string name="tugas_2">Buatlah poster ilmiah dengan kriteria di bawah ini! \n
        1. Poster berjumlah 1 \n
        2. Jenis huruf Times New Roman dengan ukuran huruf minimal 16 cm \n
        3. Isi poster menyangkut : \n
        - Judul \n
        - Nama dan Kelas \n
        - Latar belakang (*) \n
        - Rumusan masalah (*) \n
        - Tujuan \n
        - Tinjauan pustaka/ Dasar teori (*) \n
        - Metode penelitian (*) \n
        - Hasil dan Pembahasan \n
        - Simpulan dan Saran (*) \n
        <b>Keterangan (*): Ditulis dengan ringkas</b></string>
    <string name="sumber_m2">Sumber:https://3.bp.blogspot.com/-8ew5BsZ4n9I/WwUQ-I0OnJI/AAAAAAAACGs/2ww29j8WhbMUSk29qZmV2LUtORKIW2RQQCEwYBhgL/s1600/6..2%2Brambut.png</string>
    <string name="sp_bab3">KLASIFIKASI \n MAHKLUK HIDUP</string>
    <string name="judulbab3isi">Klasifikasi Mahkluk Hidup</string>
    <string name="pengantar_3">Apa yang kamu pikirkan ketika melihat gambar diatas? Tahukah kamu bahwa makhluk hidup akan dikelompokkan menjadi suatu kelompok besar dan kemudian akan dibagi menjadi kelompok-kelompok kecil hingga tersisa satu makhluk hidup. Tingkatan pengelompokan ini disebut dengan takson. Mari kita lakukan kegiatan praktikum untuk melihat tingkatan makhluk hidup di sekitar kita.</string>
    <string name="penegasan_3">Apa saja aktivitas manusia yang dapat menguntungkan dan merugikan keanekaragaman hayati ?</string>
    <string name="tujuan_3">
       Siswa mampu menganalisis prinsip-prinsip klasifikasi makhluk hidup dalam lima kingdom </string>
    <string name="alat_3">Tumbuhan yang ada di lingkungan sekitar seperti (Tanaman kunyit, bayam, padi, lumut, paku, tanaman berbunga, tanaman buah).</string>
    <string name="carakerja_1_3">Amatilah ciri-ciri tumbuhan yang tersedia!</string>
    <string name="carakerja_2_3">Tentukan tingkatan taksonomi tumbuhan tersebut!</string>
    <string name="carakerja_3_3">Carilah informasi lain diinternet terkait ciri-ciri tumbuhan yang diamati!</string>
    <string name="carakerja_4_3">Catatlah hasilnya pada tabel pengamatan!</string>
    <string name="carakerja_5_3">Jawablah pertanyaan dan tulislah kesimpulanmu pada lebar LKPD!</string>
    <string name="pengantarpertanyaan_3">Catatlah hasil pengamatanmu dalam bentuk tabel seperti tabel di bawah ini: </string>
    <string name="pertanyaan_a_3">Sebutkan dan jelaskan ciri khas dari setiap divisi!</string>
    <string name="pertanyaan_b_3">Berdasarkan hasil pengamatan, tumbuhan apa yang paling banyak persamaannya? Jelaskan!</string>
    <string name="tugas_3">Membuat Kladogram.</string>
    <string name="sumber_m3">Sumber: https://www.pinterest.com/pin/337981147025916546/</string>
    <string name="sp_bab4">Virus pada Tanaman</string>
    <string name="judulbab4isi">Virus pada Tanaman</string>
    <string name="pengantar_4">Pasti kalian sudah tidak asing lagi mendengar kata virus. Ya, saat ini kita sedang menghadapi pandemi yang disebabkan oleh virus. 	Virus adalah parasit berukuran mikroskopik yang dapat menginfeksi organisme. Virus tidak hanya menyerang manusia dan hewan saja, melainkan virus juga dapat menyerang tumbuhan. Yuk kita lakukan kegiatan praktikum untuk melihat jenis-jenis virus yang menyerang tumbuhan.</string>
    <string name="penegasan_4">Bagaimana virus dapat menyerang tanaman?</string>
    <string name="tujuan_4">
       Siswa mampu menganalisis virus pada tumbuhan melalui kegiatan praktikum dan diskusi</string>
    <string name="alat_4">Tumbuhan yang ada di sekitar halaman rumah.</string>
    <string name="carakerja_1_4">
        Siapkan 5 jenis tanaman, seperti tanaman padi, tomat, terong, cabai, pepaya, beberapa jenis labu atau tanaman lainnya!</string>
    <string name="carakerja_2_4">
        Amatilah ciri-ciri tumbuhan yang tersedia!</string>
    <string name="carakerja_3_4">
        Carilah informasi dari internet mengenai struktur dan ciri-ciri virus yang menyerang tanaman di atas!
    </string>
    <string name="carakerja_4_4">
        Catatlah hasilnya pada tabel pengamatan, jawablah pertanyaan dan tulislah kesimpulan mu pada LKPD!
    </string>
    <string name="pengantarpertanyaan_4">Catatlah hasil pengamatanmu dalam bentuk tabel seperti tabel di bawah ini: </string>
    <string name="sumber_m4">Sumber: https://www.kompas.com/sains/read/2021/02/06/170200323/ilmuwan-menemukan-evolusi-virus-tanaman-melindungi-14
-kok-bisa-?page=all</string>
    <string name="judulbab5isi">Komponen Ekosistem</string>
    <string name="pengantar_5">Perhatikan gambar di atas! pasti kamu sudah tidak asing lagi dengan kedua gambar di atas. Apakah kalian tahu bahwa ekosistem dapat digolongkan menjadi 2 jenis? Ekosistem dapat digolongkan menjadi 2 yaitu ekosistem alami dan ekosistem buatan. Dari kedua gambar di atas, manakah yang merupakan ekosistem alami dan ekosistem buatan? untuk mendalami lebih jauh, mari kita lakukan praktikum terkait ekosistem di sekitar lingkungan kita.</string>
    <string name="penegasan_5">Bagaimana ekosistem yang ada di lingkungan sekitarmu ?</string>
    <string name="sumber_m5">Sumber: https://id.pinterest.com/dekorrumah/kolam-ikan-minimalis/</string>
    <string name="sumber_m5_2">Sumber: https://pxhere.com/id/photo/1366256</string>
</resources>