<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_menuutama"
    tools:context=".MenuUtama">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_pengantar"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="@drawable/bg_kuning"
                android:fontFamily="@font/opensansbold"
                android:text="@string/pengantar"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_kikd"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_kuning"
                android:fontFamily="@font/opensansbold"
                android:text="@string/kikd"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_panduanprak"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_kuning"
                android:fontFamily="@font/opensansbold"
                android:text="@string/panduan_praktikum"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_dapus"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_kuning"
                android:fontFamily="@font/opensansbold"
                android:text="@string/daftar_pustaka"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_profil"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_kuning"
                android:fontFamily="@font/opensansbold"
                android:text="@string/profil"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_lkpd"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:background="@drawable/bg_kuning"
                android:fontFamily="@font/opensansbold"
                android:text="@string/lkpd"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>