<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_materi4"
    tools:context=".materi4.Bagian1_m4">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageButton
            android:id="@+id/home"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/btnhome"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_judul_bab4"
                android:fontFamily="@font/oldstandar"
                android:textSize="19sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/judulbab4isi"/>

            <com.zolad.zoominimageview.ZoomInImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:layout_marginTop="20dp"
                android:src="@drawable/gambar_4"/>
            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/sumber_m4"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:layout_marginLeft="30dp">


                <TextView
                    android:id="@+id/pengantarid"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="175dp"
                    android:background="@drawable/bg_bab4"
                    android:fontFamily="@font/cabin"
                    android:letterSpacing="0.1"
                    android:padding="10dip"
                    android:text="@string/pengantar"
                    android:textColor="@color/black"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="371dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pengantarid"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:background="@color/abu"
                    android:fontFamily="@font/arimo"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="5dp"
                    android:padding="10dp"
                    android:text="@string/pengantar_4"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="94dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"

                    android:layout_marginStart="6dp"
                    android:layout_marginTop="-18dp"
                    android:layout_marginBottom="121dp"
                    android:src="@drawable/icon_katapengantar" />
            </RelativeLayout>

            <TextView
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_penegasan_bab4"
                android:text="@string/penegasan_4"
                android:textSize="16sp"
                android:textAlignment="center"
                android:fontFamily="@font/arimo"
                android:textColor="@color/black"
                android:lineSpacingExtra="5dp"
                android:padding="5dp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">
            <TextView
                android:textAlignment="textEnd"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"

                android:textColor="@color/black"
                android:fontFamily="@font/opensans"
                android:textSize="12sp"
                android:text="@string/mediaiteratif"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>