<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".materi1.Bagian1_m1"
    android:background="@drawable/bg_materi1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/home"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/btnhome"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_kotak_orange"
                android:fontFamily="@font/oldstandar"
                android:padding="10dp"
                android:text="@string/judul_m1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

            <com.zolad.zoominimageview.ZoomInImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/gambar_m1" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sumber_m1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:layout_marginLeft="30dp">


                <TextView
                    android:id="@+id/pengantarid"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="-7dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="150dp"
                    android:layout_toEndOf="@+id/logo"
                    android:background="@drawable/bg_kotak_orange1"
                    android:fontFamily="@font/cabin"
                    android:letterSpacing="0.1"
                    android:padding="10dip"
                    android:text="@string/pengantar"
                    android:textColor="@color/black"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="371dp"
                    android:layout_height="wrap_content"


                    android:layout_below="@+id/pengantarid"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="10dp"

                    android:background="@color/kuning"
                    android:fontFamily="@font/arimo"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="5dp"
                    android:padding="10dp"
                    android:text="@string/pengantar_1"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="94dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:id="@+id/logo"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="-18dp"
                    android:layout_marginBottom="121dp"
                    android:src="@drawable/icon_katapengantar" />
            </RelativeLayout>

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_kotak_orange2"
                android:fontFamily="@font/arimo"
                android:lineSpacingExtra="5dp"
                android:padding="5dp"
                android:text="@string/penegasan_1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">
            <TextView
                android:textAlignment="textEnd"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"

                android:textColor="@color/black"
                android:fontFamily="@font/opensans"
                android:textSize="12sp"
                android:text="@string/mediaiteratif"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>