<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_materi5"
    tools:context=".materi5.Bagian1_m5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageButton
            android:id="@+id/home"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/btnhome"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:background="@color/abu"
                android:fontFamily="@font/oldstandar"
                android:textSize="19sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/judulbab5isi"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.zolad.zoominimageview.ZoomInImageView
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/gambar_bab5_1"/>

                <com.zolad.zoominimageview.ZoomInImageView
                    android:layout_marginLeft="10dp"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/gambar_bab5_2"/>
            </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center_horizontal"
               android:orientation="horizontal">
               <TextView
                   android:layout_width="150dp"
                   android:layout_height="wrap_content"
                   android:textAlignment="center"
                   android:textSize="12sp"
                   android:textColor="@color/black"
                   android:text="@string/sumber_m5"/>
               <TextView
                   android:layout_marginLeft="20dp"
                   android:layout_width="150dp"
                   android:layout_height="wrap_content"
                   android:textAlignment="center"
                   android:textSize="12sp"
                   android:textColor="@color/black"
                   android:text="@string/sumber_m5_2"/>
           </LinearLayout>


            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp">


                <TextView
                    android:id="@+id/pengantarid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="-20dp"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="150dp"
                    android:layout_toEndOf="@+id/logo1"
                    android:background="@drawable/bg_bab5"
                    android:fontFamily="@font/cabin"
                    android:letterSpacing="0.1"
                    android:padding="10dip"
                    android:text="@string/pengantar"
                    android:textColor="@color/black"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="371dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pengantarid"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:background="@color/kuning"
                    android:fontFamily="@font/arimo"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="5dp"
                    android:padding="10dp"
                    android:text="@string/pengantar_5"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/logo1"
                    android:layout_width="64dp"
                    android:layout_height="94dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"

                    android:layout_marginStart="6dp"
                    android:layout_marginTop="-18dp"
                    android:layout_marginBottom="121dp"
                    android:src="@drawable/icon_katapengantar" />
            </RelativeLayout>

            <TextView
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_penegasan_bab5"
                android:text="@string/penegasan_5"
                android:textSize="16sp"
                android:textAlignment="center"
                android:fontFamily="@font/arimo"
                android:textColor="@color/black"
                android:lineSpacingExtra="5dp"
                android:padding="5dp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">
            <TextView
                android:textAlignment="textEnd"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"

                android:textColor="@color/black"
                android:fontFamily="@font/opensans"
                android:textSize="12sp"
                android:text="@string/mediaiteratif2"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>